--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,18 @@
 }
  */
 
-h1,
-h2 {
+h1, h2, h3, h4 {
     font-family: 'Merriweather', serif;
 }
 
-/* .w {color: gold;
-    background-color: blue;
+.material-icons {
+    color: rgb(109, 94, 9);
+    margin-right: 10px;
 }
- */
+
+.w {color: rgb(109, 94, 9);
+    font-size: 3rem;
+}
 
  .main {background-color: rgb(233, 239, 243);
 
@@ -46,9 +49,7 @@ p{
     margin-left: 15px;
     text-align: justify;
     font-size: 1.2rem;
-
 }
-
 
 .heading {
     display: flex;
@@ -58,7 +59,7 @@ p{
     align-items: center;
 }
 
-a {
+.navbar a {
     color: rgb(56, 45, 45);
     display: block;
     float: left;
@@ -68,7 +69,7 @@ a {
     font-size: 18px;
 }
 
-a:hover {
+.navbar a:hover {
     /* background-color: #ddd;
     color: rgb(11, 97, 154); */
     color: #eee;
@@ -82,18 +83,18 @@ a:hover {
 }
 
 #video {
-    margin-top: 66px;
+    margin-top: 86px;
 }
 
 @media all and (max-width: 1280px) {
     #video {
-        margin-top: 154px;
+        margin-top: 174px;
         width: 640px;
         height: 360px;
     }
 }
 @media all and (max-width: 650px) {
-    a {
+    .navbar a {
         float: none;
         display: block;
         padding: 10px 40px;
@@ -111,7 +112,42 @@ a:hover {
     }
 }
 
-#watch {
+#watch, #map {
     margin: 0 auto;
     display: table
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 32%;
+    border-radius: 10px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .card img {
+    border-radius: 10px 10px 0 0;
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+  input[type=submit] {
+    background-color: rgb(109, 94, 9);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+  .wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 10px;
 }
